--- a/codes/preloader.css
+++ b/codes/preloader.css
@@ -287,14 +287,20 @@ strong {
         position: absolute;
         z-index: 101;
         opacity: 1;
-        overflow: scroll;
+        overflow-y: scroll;
+        overflow-x: hidden;
         /* margin-top: 5vh; */
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
         transition: all 500ms cubic-bezier(0.165, 0.840, 0.440, 1.000);
     }
 
     .sidemenu-vector {
-        visibility: hidden;
+        /* visibility: hidden;
+        display: none; */
+        /* transform: translate(0, 0rem); */
+        transform: translate(11rem, 22rem);
+
+
     }
 
     /* for position of sidenav  */
